# paimon-rust

./: README.md
.github/workflows/: ci.yml
bindings/python/: Cargo.toml
bindings/python/python/pypaimon_rust/: datafusion.pyi
bindings/python/src/: context.rs  lib.rs  read.rs  table.rs
bindings/python/tests/: test_read.py
crates/integration_tests/tests/: read_tables.rs
crates/integrations/datafusion/: Cargo.toml
crates/integrations/datafusion/src/: catalog.rs  procedures.rs  relation_planner.rs  sql_context.rs
crates/integrations/datafusion/tests/: pk_tables.rs  procedures.rs  read_tables.rs  sql_context_tests.rs  time_travel_schema_tests.rs  vortex_tables.rs
crates/integrations/datafusion/tests/common/: mod.rs
crates/paimon/: Cargo.toml
crates/paimon/src/arrow/: mod.rs
crates/paimon/src/arrow/format/: mosaic.rs  parquet.rs  vortex.rs
crates/paimon/src/catalog/rest/: rest_token_file_io.rs
crates/paimon/src/io/: file_io.rs  mod.rs  storage.rs  storage_azdls.rs  storage_config.rs  storage_cos.rs  storage_gcs.rs  storage_obs.rs  storage_s3.rs
crates/paimon/src/lumina/: mod.rs
crates/paimon/src/spec/: binary_row.rs  core_options.rs  data_type_casts.rs  mod.rs  partial_update.rs  partition_utils.rs  schema.rs  snapshot.rs  types.rs
crates/paimon/src/table/: bucket_assigner_cross.rs  cow_writer.rs  data_file_reader.rs  kv_file_reader.rs  kv_file_writer.rs  mod.rs  read_builder.rs  sort_merge.rs  source.rs  table_read.rs  table_scan.rs  table_write.rs  time_travel.rs  vector_search_builder.rs  write_builder.rs
crates/paimon/tests/fixtures/snapshot/: snapshot-v3.json
dev/spark/: provision.py
docs/src/: architecture.md  contributing.md  getting-started.md  index.md  releases.md  sql.md
docs/src/release/: creating-a-release.md
scripts/: bump-version.sh
