# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "paimon-datafusion"
edition.workspace = true
version.workspace = true
exclude = ["testdata/"]
license.workspace = true
homepage = "https://paimon.apache.org/docs/rust/datafusion/"
documentation = "https://docs.rs/paimon-datafusion"
description = "Apache Paimon DataFusion Integration"
categories = ["database"]
keywords = ["paimon", "datafusion", "integrations"]

[features]
fulltext = ["paimon/fulltext"]
vortex = ["paimon/vortex"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
constant_time_eq = { workspace = true }
datafusion = { workspace = true }
log = "0.4"
paimon = { workspace = true }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt", "time", "fs"] }
lexical-write-float = "1.0.6"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
flate2 = "1"
parquet = { workspace = true }
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
